<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/purple_500">

            <TextView
                android:id="@+id/severity"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/purple_200"
                app:layout_constraintStart_toEndOf="@+id/accident_maps"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/involved_person"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/severity"
                app:layout_constraintTop_toBottomOf="@+id/severity" />

            <TextView
                android:id="@+id/department_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/department"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/severity" />

            <ImageView
                android:id="@+id/accident_maps"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/accident_example_foreground" />

            <View
                android:id="@+id/divider"
                android:layout_width="3dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/accident_maps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/accident_maps" />

            <TextView
                android:id="@+id/road_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/involved_person_title" />

            <TextView
                android:id="@+id/severity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/severity"
                android:textColor="@color/purple_200"
                app:layout_constraintBottom_toTopOf="@+id/severity"
                app:layout_constraintStart_toStartOf="@+id/severity" />

            <TextView
                android:id="@+id/involved_person_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/involded"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/involved_person"
                app:layout_constraintStart_toStartOf="@+id/involved_person" />

            <TextView
                android:id="@+id/department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="TextView"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/department_title"
                app:layout_constraintTop_toTopOf="@+id/department_title" />

            <ImageView
                android:id="@+id/fav_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/department"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/empty_star" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>